--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,11 +17,11 @@ services:
         networks:
             - custom_net
         environment:
-            -  MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
-               MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
+            -  MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
+               MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASS}"
 
     asp_net:
         build: net_app/TaskApplicationAPI/TaskApplicationAPI/.
-        networks: custom_net
-        environment:
+        networks: 
+            - custom_net
 
