--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,23 +5,26 @@ services:
         networks:
             - custom_net
         volumes:
-            - pg_db:/data
+            - ./pg_db:/var/lib/postgresql/data
         environment:
-            - POSTGRES_USER:     ${PG_USER}
-              POSTGRES_PASSWORD: ${PG_PASS}
+            - POSTGRES_USER=${PG_USER}
+              POSTGRES_PASSWORD=${PG_PASS}
 
     mongo_db:
-        image: mongo_db
+        image: mongo
         volumes:
-            - mongo_db:/data
+            - ./mongo_db:/data/db
         networks:
             - custom_net
         environment:
-            -  MONGO_INITDB_ROOT_USERNAME: "${MONGO_USER}"
-               MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASS}"
+            -   MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+                MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
 
     asp_net:
         build: net_app/TaskApplicationAPI/TaskApplicationAPI/.
-        networks: 
+        networks:
             - custom_net
 
+networks:
+        custom_net:
+                external: true
